refactoring and README.md